# ChocoPy-LLVM

./: .gitignore  CMakeLists.txt  README.md
Include/chocopy-llvm/AST/: AST.h  ASTContext.h  ASTNodeTraverser.h  DeclVisitor.h  DeclarationNodes.def  ExprNodes.def  ExprVisitor.h  JSONASTDumper.h  RecursiveASTVisitor.h  StmtVisitor.h  TextDiagnosticPrinter.h  Type.h  TypeAnnotationNodes.def  TypeAnnotationVisitor.h  TypeVisitor.h
Include/chocopy-llvm/Analysis/: CFG.h
Include/chocopy-llvm/Basic/: ASCIICharInfo.h  Diagnostic.h  LLVM.h  SymbolTable.h
Include/chocopy-llvm/CodeGen/: ModuleBuilder.h
Include/chocopy-llvm/Lexer/: Lexer.h  Token.h  TokenKinds.h
Include/chocopy-llvm/Sema/: IdentifierResolver.h  Scope.h  Sema.h
Source/: CMakeLists.txt  main.cpp
Source/Core/Lex/: Lexer.cppm
Source/Driver/: CMakeLists.txt  Driver.cpp
Source/Lib/: CMakeLists.txt
Source/Lib/AST/: AST.cpp  ASTContext.cpp  CMakeLists.txt  Declaration.cpp  JSONASTDumper.cpp  Stmt.cpp  TextDiagnosticPrinter.cpp  Type.cpp
Source/Lib/AST/Private/: AST.cpp  ASTContext.cpp  Declaration.cpp  JSONASTDumper.cpp  Stmt.cpp  Type.cpp
Source/Lib/AST/Public/: AST.cppm  ASTContext.cppm  ASTModule.cppm  ASTNodeTraverser.cppm  DeclVisitor.cppm  ExprVisitor.cppm  JSONASTDumper.cppm  RecursiveASTVisitor.cppm  StmtNodes.def  StmtVisitor.cppm  Type.cppm  TypeAnnotationVisitor.cppm  TypeNodes.def  TypeVisitor.cppm
Source/Lib/Analysis/: CFG.cpp  CFGPrinter.cpp  CMakeLists.txt
Source/Lib/Analysis/Private/: CFG.cpp  CFGPrinter.cpp
Source/Lib/Analysis/Public/: Analysis.cppm  CFG.cppm
Source/Lib/Basic/: ASCIICharInfo.cpp  CMakeLists.txt  Diagnostic.cpp
Source/Lib/Basic/Private/: ASCIICharInfo.cpp  Diagnostic.cpp  TokenKinds.cpp
Source/Lib/Basic/Public/: ASCIICharInfo.cppm  Basic.cppm  Diagnostic.cppm  DiagnosticKinds.def  LLVM.cppm  LLVMModule.cppm  SymbolTable.cppm  TokenKinds.cppm
Source/Lib/Basic1/: ASCIICharInfo.cpp  ASCIICharInfo.cppm  CMakeLists.txt  Diagnostic.cpp
Source/Lib/CodeGen/: CMakeLists.txt  CodeGenFunction.cpp
Source/Lib/CodeGen/Private/: CodeGenFunction.cpp  CodeGenModule.cpp  ModuleBuilder.cpp
Source/Lib/CodeGen/Public/: CodeGenFunction.cppm  CodeGenFunction.h  CodeGenModule.cppm  CodeGenModule.h  Codegen.cppm  ModuleBuilder.cppm
Source/Lib/Lex/: CMakeLists.txt  Lexer.cpp  Lexer.cppm  Token.cppm
Source/Lib/Lex/Private/: CMakeLists.txt  TokenKinds.cppm  TokenKinds.def
Source/Lib/Lexer/: CMakeLists.txt  CachingLexer.cpp  Lexer.cpp  TokenKinds.cpp
Source/Lib/Lexer/Private/: CachingLexer.cpp  Lexer.cpp
Source/Lib/Lexer/Public/: Lexer.cppm  Token.cppm
Source/Lib/Parser/: CMakeLists.txt  Parser.cpp
Source/Lib/Parser/Private/: Parser.cpp
Source/Lib/Parser/Public/: Parser.cppm  Parser.h
Source/Lib/Sema/: CMakeLists.txt  IdentifierResolver.cpp  Scope.cpp  Sema.cpp
Source/Lib/Sema/Private/: IdentifierResolver.cpp  Scope.cpp  Sema.cpp
Source/Lib/Sema/Public/: IdentifierResolver.cppm  Scope.cppm  Sema.cppm
Source/Lib/Utils/: CMakeLists.txt  FileBuffer.cppm  FileIOUtils.cppm
Source/Utils/: CMakeLists.txt  FileIOUtils.cpp
Test/: CMakeLists.txt  run_test.py
Test/Demo/: demo.py  demo.py.ast
Test/Parser/: CMakeLists.txt
Test/Parser/Bad/: bad_assign_expr1.py  bad_assign_expr1.py.err  bad_assign_expr2.py  bad_assign_expr2.py.err  bad_func_def.py  bad_func_def.py.err  bad_indentation.py  bad_indentation.py.err  bad_stmt.py  bad_stmt.py.err  lit.cfg.py  lit.site.cfg.py.in
Test/Parser/Stage_A/: chained_mixed_assignments.py  chained_mixed_assignments.py.ast  chained_var_assignments.py  chained_var_assignments.py.ast  class_attr.py  class_attr.py.ast  class_attr_get.py  class_attr_get.py.ast  class_attr_set.py  class_attr_set.py.ast  class_constructor.py  class_constructor.py.ast  class_method.py  class_method.py.ast  def_func.py  def_func.py.ast  def_func_args.py  def_func_args.py.ast  def_func_global.py  def_func_global.py.ast  def_func_nested.py  def_func_nested.py.ast  def_func_nonlocal.py  def_func_nonlocal.py.ast  expr_if.py  expr_if.py.ast  expr_if_chained.py  expr_if_chained.py.ast  expr_index.py  expr_index.py.ast  expr_plus.py  expr_plus.py.ast  expr_unary.py  expr_unary.py.ast  global.py  global.py.ast  lit.cfg.py  lit.site.cfg.py.in  literals.py  literals.py.ast  (+16 more)
Test/Parser/Stage_B/: contains.py  contains.py.ast  coverage.py  coverage.py.ast  list_classes_dyndispatch.py  list_classes_dyndispatch.py.ast  lit.cfg.py  lit.site.cfg.py.in  nested_funcs.py  nested_funcs.py.ast
Test/Sema/: CMakeLists.txt
Test/Sema/Bad/: bad_assign_expr.py  bad_assign_expr.py.err  bad_class_attr.py  bad_class_attr.py.err  bad_class_attr_type.py  bad_class_attr_type.py.err  bad_class_init_override.py  bad_class_init_override.py.err  bad_class_init_return.py  bad_class_init_return.py.err  bad_class_member_expr.py  bad_class_member_expr.py.err  bad_class_method.py  bad_class_method.py.err  bad_class_method_invoke.py  bad_class_method_invoke.py.err  bad_class_method_override.py  bad_class_method_override.py.err  bad_class_method_override_attr.py  bad_class_method_override_attr.py.err  bad_class_super.py  bad_class_super.py.err  bad_concat.py  bad_concat.py.err  bad_duplicate_class.py  bad_duplicate_class.py.err  bad_duplicate_class_member.py  bad_duplicate_class_member.py.err  bad_duplicate_global.py  bad_duplicate_global.py.err  bad_duplicate_global_2.py  bad_duplicate_global_2.py.err  bad_duplicate_local.py  bad_duplicate_local.py.err  bad_expr_binary.py  bad_expr_binary.py.err  bad_expr_if.py  bad_expr_if.py.err  bad_expr_unary.py  bad_expr_unary.py.err  (+32 more)
test/demo/: demo.py
