set(LIBRARY_NAME Lex)

add_library(Lex
	Lexer.cpp
)

file(GLOB MODULE_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cppm")

target_sources(${LIBRARY_NAME} PUBLIC
	FILE_SET CXX_MODULES
	BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}
	FILES ${MODULE_SOURCES}
)

target_link_libraries(${LIBRARY_NAME} PRIVATE
	Basic
)